<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toLabel" />

    <TextView
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type"
        android:textSize="20sp"
        android:layout_toEndOf="@+id/subjectLabel" />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeLabel"
        android:layout_alignParentStart="true"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/subjectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subjectLabel"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/typeLabel"
        android:textSize="20sp" />

    <TextView
    android:id="@+id/lecturerLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/subjectLabel"
    android:text="@string/lecturerLabel" />

    <TextView
        android:id="@+id/lecturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject"
        android:layout_toRightOf="@+id/lecturerLabel" />

    <TextView
        android:id="@+id/room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lecturer"
        android:layout_toRightOf="@+id/roomLabel" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/room"
        android:layout_toRightOf="@+id/addressLabel" />


    <TextView
        android:id="@+id/fromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="134dp" />

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/fromLabel"
        android:layout_toEndOf="@+id/room" />

    <TextView
        android:id="@+id/toLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="53dp" />



    <TextView
        android:id="@+id/roomLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roomLabel"
        android:layout_below="@+id/lecturerLabel"
        android:layout_alignEnd="@+id/fromLabel" />

    <TextView
    android:id="@+id/addressLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:text="@string/addressLabel"
        android:layout_below="@+id/roomLabel"
        android:layout_alignRight="@+id/room" />


</RelativeLayout>